Fix share button spacing

--- a/assets/stylesheets/responsive/_frontpage_layout.scss
+++ b/assets/stylesheets/responsive/_frontpage_layout.scss
@@ -192,7 +192,7 @@
   }
 
   #frontpage-share-buttons {
-    margin-bottom: 3em;
+    margin-bottom: 0;
 
     .twitter-share-button {
       vertical-align: top;
